fix 2 line block main

--- a/css/page_2_style.css
+++ b/css/page_2_style.css
@@ -81,6 +81,8 @@ html, body, .wrapper{
 
 .main{
     grid-area: main;
+    background-color: rgb(38, 43, 49);
+    padding-bottom: 32px;
 }
 
 .main > .title{
